Pinned leader styles and per-frame dash duty
route(...) gains a forcedStyle overload that pins every leader of an epoch
to sLeader or poLeader (the gate keeps observing, so unpinning resumes from
the dwell the geometry earned; the near-distance ladder still folds a pinned
po, a pinned straight skips it); GuideLineStyle.withDashDuty lets a stroke
fade its pattern while the rhythm and phase stand still.

Also carries the pre-existing local working tree (the removed test screen
and the wider hardening edits).